--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -561,6 +561,8 @@ excerpt:
 
 * [SwipeMenuListView](https://github.com/baoyongzhang/SwipeMenuListView) listview滑动删除
 
+* [android-auto-scroll-view-pager](https://github.com/Trinea/android-auto-scroll-view-pager) 轮播的ViewPager
+
 ---
 
 #### 发布自己的开源项目到jcenter和Maven Central，这样其他开发者可以很简单的引用项目
@@ -607,6 +609,47 @@ excerpt:
         （这样就能修改中间的名字， 比如com.snowdream.enhancedpulltorefreshlistview改成com.snowdream1314.enhancedpulltorefreshlistview）
         3. Refactor -> Rename就行了
         4. 重新编译一下
+        
+
+---
+
+#### View事件监听ViewTreeObserver.OnGlobalLayoutListener
+
+* 一共有5个接口：
+        
+* 当在一个视图树中的焦点状态发生改变时，所要调用的回调函数的接口类:        
+        
+        interface ViewTreeObserver.OnGlobalFocusChangeListener
+
+* 当在一个视图树中全局布局发生改变或者视图树中的某个视图的可视状态发生改变时，所要调用的回调函数的接口类:
+
+        interface ViewTreeObserver.OnGlobalLayoutListener
+        
+* 当一个视图树将要绘制时，所要调用的回调函数的接口类:
+
+        interface ViewTreeObserver.OnPreDrawListener
+        
+* 当一个视图树中的一些组件发生滚动时，所要调用的回调函数的接口类:
+
+        interface ViewTreeObserver.OnScrollChangedListener
+        
+* 当一个视图树的触摸模式发生改变时，所要调用的回调函数的接口类:
+
+        interface ViewTreeObserver.OnTouchModeChangeListener
+        
+* 简单应用：
+
+        ViewTreeObserver viewTreeObserver = view.getViewTreeObserver();//初始化
+        //设置监听回调
+        if (viewTreeObserver.isAlive()) {
+            viewTreeObserver.addOnGlobalLayoutListener(new ViewTreeObserver.OnGlobalLayoutListener() {
+                @Override
+                public void onGlobalLayout() {
+                    //获取View高度，设置高度等
+                }
+                
+            });
+        }
         
 ---
 
