--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -531,40 +531,6 @@ excerpt:
 
 ---
 
-#### 项目中用到的开源插件
-
-* [sweet-alert-dialog] (https://github.com/pedant/sweet-alert-dialog) 一款漂亮的弹框dialog，可以定制多种样式
-
-* [StickyNavLayout] (https://github.com/ta893115871/StickyNavLayout) 多功能的一个库，支持下拉刷新，包括顶部内容区域，水平导航，ViewPager
-
-* [SwipeBackLayout] (https://github.com/ikew0ng/SwipeBackLayout) 滑动返回上一个活动，可以定义滑动的方向
-
-* [EnhancedListView] (https://github.com/timroes/EnhancedListView) ListView侧滑删除
-
-* [RoundedImageView] (https://github.com/vinc3m1/RoundedImageView) 能让图片显示成圆角的一款插件
-
-* [pinned-section-listview](https://github.com/beworker/pinned-section-listview) 分组并能固定标题的ListView
-
-* [ImageLoader](https://github.com/nostra13/Android-Universal-Image-Loader)图片加载
-
-* [ImagePicker](https://github.com/jeasonlzy0216/ImagePicker) 图片选择器
-
-* [PagerSlidingTabStrip](https://github.com/astuetz/PagerSlidingTabStrip)水平滚动导航栏
-
-* [okhttp](https://github.com/square/okhttp)网络请求
-
-* [datetimepicker](https://github.com/flavienlaurent/datetimepicker) 日历、时间选择
-
-* [PermissionsDispatcher](https://github.com/hotchemi/PermissionsDispatcher) 运行时权限管理
-
-* 官方的下拉刷新控件：SwipeRefreshLayout
-
-* [SwipeMenuListView](https://github.com/baoyongzhang/SwipeMenuListView) listview滑动删除
-
-* [android-auto-scroll-view-pager](https://github.com/Trinea/android-auto-scroll-view-pager) 轮播的ViewPager
-
----
-
 #### 发布自己的开源项目到jcenter和Maven Central，这样其他开发者可以很简单的引用项目
 
 * [如何使用Android Studio把自己的Android library分享到jCenter和Maven Central](http://www.open-open.com/lib/view/open1435109824278.html)
@@ -651,6 +617,67 @@ excerpt:
             });
         }
         
+---
+
+#### WebView相关
+        
+        布局：
+        <WebView
+            android:id="@+id/wv_webview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </WebView>
+        
+        //代码设置
+        webView = (WebView) findViewById(R.id.wv_webview);
+        WebSettings webSettings = webView.getSettings();
+        webSettings.setJavaScriptEnabled(true);     //可以JS交互
+        webView.setWebChromeClient(new WebChromeClient());  //设置client,必须是WebChromeClient()， WebViewClient好像不能处理JS？
+        webView.loadUrl(getIntent().getStringExtra("url"));
+        
+        //java调用JS
+        private View.OnClickListener clickListener = new View.OnClickListener() {
+        @Override
+        public void onClick(View v) {
+            webView.loadUrl("javascript:submitForm()");     //submitForm()为嵌入网页的JS方法
+        }
+    };
+
+---
+
+#### 项目中用到的开源插件
+
+* [sweet-alert-dialog] (https://github.com/pedant/sweet-alert-dialog) 一款漂亮的弹框dialog，可以定制多种样式
+
+* [StickyNavLayout] (https://github.com/ta893115871/StickyNavLayout) 多功能的一个库，支持下拉刷新，包括顶部内容区域，水平导航，ViewPager
+
+* [SwipeBackLayout] (https://github.com/ikew0ng/SwipeBackLayout) 滑动返回上一个活动，可以定义滑动的方向
+
+* [EnhancedListView] (https://github.com/timroes/EnhancedListView) ListView侧滑删除
+
+* [RoundedImageView] (https://github.com/vinc3m1/RoundedImageView) 能让图片显示成圆角的一款插件
+
+* [pinned-section-listview](https://github.com/beworker/pinned-section-listview) 分组并能固定标题的ListView
+
+* [ImageLoader](https://github.com/nostra13/Android-Universal-Image-Loader)图片加载
+
+* [ImagePicker](https://github.com/jeasonlzy0216/ImagePicker) 图片选择器
+
+* [PagerSlidingTabStrip](https://github.com/astuetz/PagerSlidingTabStrip)水平滚动导航栏
+
+* [okhttp](https://github.com/square/okhttp)网络请求
+
+* [datetimepicker](https://github.com/flavienlaurent/datetimepicker) 日历、时间选择
+
+* [PermissionsDispatcher](https://github.com/hotchemi/PermissionsDispatcher) 运行时权限管理
+
+* 官方的下拉刷新控件：SwipeRefreshLayout
+
+* [SwipeMenuListView](https://github.com/baoyongzhang/SwipeMenuListView) listview滑动删除
+
+* [android-auto-scroll-view-pager](https://github.com/Trinea/android-auto-scroll-view-pager) 轮播的ViewPager
+
+
 ---
 
 
