--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -632,7 +632,16 @@ excerpt:
         webView = (WebView) findViewById(R.id.wv_webview);
         WebSettings webSettings = webView.getSettings();
         webSettings.setJavaScriptEnabled(true);     //可以JS交互
-        webView.setWebChromeClient(new WebChromeClient());  //设置client,必须是WebChromeClient()， WebViewClient好像不能处理JS？
+        webView.setWebChromeClient(new WebChromeClient() {  //设置client,必须是WebChromeClient()， WebViewClient好像不能处理JS？
+
+            public void onProgressChanged(WebView view,int newProgress) {
+                Log.i("onProgressChanged", String.valueOf(newProgress));
+                if (newProgress == 100) {       //加载完毕
+                    submit.setVisibility(View.VISIBLE);
+                }
+            }
+
+        });  
         webView.loadUrl(getIntent().getStringExtra("url"));
         
         //java调用JS
@@ -642,6 +651,20 @@ excerpt:
             webView.loadUrl("javascript:submitForm()");     //submitForm()为嵌入网页的JS方法
         }
     };
+
+---
+
+#### 设置状态栏的颜色
+
+        修改res\values目录下的styles文件：
+        <style name="AppTheme" parent="Theme.AppCompat.Light">
+            <!-- Customize your theme here. -->
+            <item name="colorPrimary">@color/colorPrimary</item>
+            <item name="colorPrimaryDark">@color/colorPrimaryDark</item>    //状态栏的颜色
+            <item name="colorAccent">@color/colorAccent</item>
+            <!--<item name="android:windowIsTranslucent">true</item>-->
+        </style>
+
 
 ---
 
