--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -665,7 +665,8 @@ excerpt:
             <!--<item name="android:windowIsTranslucent">true</item>-->
         </style>
 
-
+        ![颜色示意图](https://github.com/snowdream1314/snowdream1314.github.io/blob/master/android%E7%8A%B6%E6%80%81%E6%A0%8F%E9%A2%9C%E8%89%B2.png)
+        
 ---
 
 #### 项目中用到的开源插件
