--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -669,6 +669,22 @@ excerpt:
         
 ---
 
+#### Android利用SpannableStringBuilder设置TextView中部分文字的颜色
+
+        SpannableString titleSpannableString = new SpannableString(titleString+" "+subTitleString);
+        titleSpannableString.setSpan(new ForegroundColorSpan(ColorUtil.HextoColor("#FFF02E1F")), titleString.length(), titleString.length()+subTitleString.length()+1,  Spannable.SPAN_INCLUSIVE_EXCLUSIVE);
+        titleTextView.setText(titleSpannableString);
+        
+         * titleSpannableString.setSpan
+         * (new ForegroundColorSpan(Color.RED), 1, 3, Spannable.SPAN_INCLUSIVE_EXCLUSIVE);     
+         * 第一个参数:颜色
+         * 第二个参数:开始位置
+         * 第三个参数:终止位置
+         * 第三个参数:SPAN_EXCLUSIVE_INCLUSIVE.用来对第二个和第三个参数进一步限制和说明
+         * 此处表示包含1,但是不包含3.
+
+---
+
 #### 项目中用到的开源插件
 
 * [sweet-alert-dialog](https://github.com/pedant/sweet-alert-dialog) 一款漂亮的弹框dialog，可以定制多种样式
