--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -685,6 +685,43 @@ excerpt:
 
 ---
 
+#### android 用设置饱和度为0的方法让图片变灰色,设置1可恢复原图
+
+        /*
+        * change imageview to gray for disable tag
+        * @param imageview
+        *
+        * by xxq
+        * */
+        private static void Image2Gray(ImageView imageView) {
+            Drawable drawable = imageView.getDrawable();
+            ColorMatrix cm = new ColorMatrix();
+            cm.setSaturation(0);    //值为1可恢复原图
+            ColorMatrixColorFilter cf = new ColorMatrixColorFilter(cm);
+            drawable.setColorFilter(cf);
+            imageView.setImageDrawable(drawable);
+        }
+        
+        //也可以用同样的方法给对应的imageView设置灰色
+        private static void Image2Gray(ImageView imageView) {
+            ColorMatrix cm = new ColorMatrix();
+            cm.setSaturation(0);    //值为1可恢复原图
+            ColorMatrixColorFilter cf = new ColorMatrixColorFilter(cm);
+            imageView.setColorFilter(cf);
+        }
+
+---
+
+#### textView 特殊属性
+
+        android:maxEms="4"
+        [Android 开发者，你真的会用textview（maxEms和maxLength）的属性吗?](http://blog.csdn.net/beiminglei/article/details/9317997)
+        [android TextView setEms 方法名字](http://blog.csdn.net/JavaLive09/article/details/38661773)
+        
+        android:ellipsize="end"     //内容过长在末尾增加省略号
+
+---
+
 #### 项目中用到的开源插件
 
 * [sweet-alert-dialog](https://github.com/pedant/sweet-alert-dialog) 一款漂亮的弹框dialog，可以定制多种样式
