--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -719,6 +719,7 @@ excerpt:
         [android TextView setEms 方法名字](http://blog.csdn.net/JavaLive09/article/details/38661773)
         
         android:ellipsize="end"     //内容过长在末尾增加省略号
+        android:includeFontPadding="false" //取消预留的padding,TextView默认留下了上下的padding，是为了显示上标和下标。
 
 ---
 
