--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -755,6 +755,7 @@ excerpt:
 
 * [android-auto-scroll-view-pager](https://github.com/Trinea/android-auto-scroll-view-pager) 轮播的ViewPager
 
+* [MPAndroidChart](https://github.com/PhilJay/MPAndroidChart)   统计图表库,可以绘制折线图等
 
 ---
 
