--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -712,7 +712,7 @@ excerpt:
 
 ---
 
-#### textView 特殊属性
+#### textView 特殊属性(没有调整文字间距的API)
 
         android:maxEms="4"
         [Android 开发者，你真的会用textview（maxEms和maxLength）的属性吗?](http://blog.csdn.net/beiminglei/article/details/9317997)
@@ -720,6 +720,9 @@ excerpt:
         
         android:ellipsize="end"     //内容过长在末尾增加省略号
         android:includeFontPadding="false" //取消预留的padding,TextView默认留下了上下的padding，是为了显示上标和下标。
+        android:lineSpacingExtra    //设置行间距，如”3dp”
+        android:lineSpacingMultiplier   //设置行间距的倍数，如”1.2″
+        android:textScaleX      //设置文字水平方向的伸缩
 
 ---
 
