--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -760,6 +760,8 @@ excerpt:
 
 * [MPAndroidChart](https://github.com/PhilJay/MPAndroidChart)   统计图表库,可以绘制折线图等
 
+* [leakcanary](https://github.com/square/leakcanary)    检测内存泄漏
+
 ---
 
 
