--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -712,6 +712,44 @@ excerpt:
 
 ---
 
+#### android 改变图片的颜色
+
+        /*
+        * change image color
+        * @params context, id
+        *
+        * @return
+        *
+        * by xxq*/
+        public static Bitmap changeImageColor(Context context, int id) {
+            Bitmap bitmap = BitmapFactory.decodeResource(context.getResources(), id);
+    //		int mBitmapWidth = bitmap.getWidth();
+    //		int mBitmapHeight = bitmap.getHeight();
+    
+            Bitmap mAlphaBitmap = Bitmap.createBitmap(bitmap.getWidth(), bitmap.getHeight(), Bitmap.Config.ARGB_8888);
+            Canvas mCanvas = new Canvas(mAlphaBitmap);//画布
+            Paint mPaint = new Paint();//画笔
+            mPaint.setColor(Color.parseColor("#FFFFFF"));
+            Bitmap alphaBitmap = bitmap.extractAlpha();
+            mCanvas.drawBitmap(alphaBitmap, 0, 0, mPaint);
+    //        for(int i = 0; i < mBitmapHeight; i++) {
+    //			for (int j = 0; j < mBitmapWidth; j++) {
+    ////				int color = bitmap.getPixel(j, i);//可以获取每个点的颜色值，从而得到每个点的RGB值
+    ////				int r = Color.red(color);
+    ////				int g = Color.green(color);
+    ////				int b = Color.blue(color);
+    //
+    //                mAlphaBitmap.setPixel(j, i, Color.argb(255, 255, 255, 255));
+    //			}
+    //		}
+            return mAlphaBitmap;
+        }
+        
+        相当于按照原图重新画了一遍，生成新的bitmap
+
+
+---
+
 #### textView 特殊属性(没有调整文字间距的API)
 
         android:maxEms="4"
