--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -764,6 +764,19 @@ excerpt:
 
 ---
 
+#### 动态设置shape
+        
+        TextView tag = new TextView(fragmentActivity);
+        
+        GradientDrawable myGrad = new GradientDrawable();
+        myGrad.setCornerRadius(3);      //圆角
+        myGrad.setStroke(1,Color.parseColor("#" + itemTag.getTag_color()));     //边框颜色和宽度
+        tag.setBackgroundDrawable(myGrad);
+        
+        [Android代码设置Shape,corners,Gradient](http://blog.csdn.net/houshunwei/article/details/17392409)
+
+---
+
 #### 项目中用到的开源插件
 
 * [sweet-alert-dialog](https://github.com/pedant/sweet-alert-dialog) 一款漂亮的弹框dialog，可以定制多种样式
