--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -729,7 +729,7 @@ excerpt:
             Bitmap mAlphaBitmap = Bitmap.createBitmap(bitmap.getWidth(), bitmap.getHeight(), Bitmap.Config.ARGB_8888);
             Canvas mCanvas = new Canvas(mAlphaBitmap);//画布
             Paint mPaint = new Paint();//画笔
-            mPaint.setColor(Color.parseColor("#FFFFFF"));
+            mPaint.setColor(Color.parseColor("#FFFFFF"));   //画笔颜色
             Bitmap alphaBitmap = bitmap.extractAlpha();
             mCanvas.drawBitmap(alphaBitmap, 0, 0, mPaint);
     //        for(int i = 0; i < mBitmapHeight; i++) {
@@ -761,7 +761,19 @@ excerpt:
         android:lineSpacingExtra    //设置行间距，如”3dp”
         android:lineSpacingMultiplier   //设置行间距的倍数，如”1.2″
         android:textScaleX      //设置文字水平方向的伸缩
+        
+* 特殊样式，下划线，中间划线等等
 
+        textView.getPaint().setFlags(Paint. UNDERLINE_TEXT_FLAG ); //下划线
+
+        textView.getPaint().setAntiAlias(true);//抗锯齿
+
+        textview.getPaint().setFlags(Paint. STRIKE_THRU_TEXT_FLAG); //中划线
+
+        setFlags(Paint. STRIKE_THRU_TEXT_FLAG|Paint.ANTI_ALIAS_FLAG);  // 设置中划线并加清晰 
+
+        textView.getPaint().setFlags(0);  // 取消设置的的划线
+    
 ---
 
 #### 动态设置shape
