--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -788,6 +788,47 @@ excerpt:
 
 ---
 
+#### 状态栏相关
+
+* 获得状态栏高度
+
+        /**
+         * 获得状态栏的高度
+         *
+         * @param context
+         * @return
+         */
+        public static int getStatusHeight(Context context) {
+
+            int statusHeight = -1;
+            try {
+                Class clazz = Class.forName("com.android.internal.R$dimen");
+                Object object = clazz.newInstance();
+                int height = Integer.parseInt(clazz.getField("status_bar_height")
+                        .get(object).toString());
+                statusHeight = context.getResources().getDimensionPixelSize(height);
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+            return statusHeight;
+        }
+        
+* 状态栏透明
+
+        if(Build.VERSION.SDK_INT >= Build.VERSION_CODES.KITKAT) {
+            //透明状态栏
+            getWindow().addFlags(WindowManager.LayoutParams.FLAG_TRANSLUCENT_STATUS);
+            //透明导航栏
+            getWindow().addFlags(WindowManager.LayoutParams.FLAG_TRANSLUCENT_NAVIGATION);
+        }
+        
+        对应的layout根布局设置属性
+        android:fitsSystemWindows="true"//布局扩展至手机屏幕
+        android:clipToPadding="true"
+
+
+---
+
 #### 项目中用到的开源插件
 
 * [sweet-alert-dialog](https://github.com/pedant/sweet-alert-dialog) 一款漂亮的弹框dialog，可以定制多种样式
