--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -312,7 +312,7 @@ excerpt:
             android:maxLines="1"        //限制行数
             android:inputType="textPassword"    //限制输入的类型
             android:maxLength="10"              //限制最大输入字符个数为10 
-            android:imeOptions="actionNext"     //设置输入法回车键的功能,如:actionNext,下一项；actionDone:完成
+            android:imeOptions="actionNext"     //设置输入法回车键的功能,如:actionNext,下一项；actionDone:完成;actionSearch搜索
             android:layout_weight="1"
             android:textColor="#404040"
             android:textColorHint="#b4b4b4"     //设置提示的字体颜色
@@ -320,6 +320,19 @@ excerpt:
             
         密码不可见：editText.setTransformationMethod(PasswordTransformationMethod.getInstance());
         密码可见： editText.setTransformationMethod(HideReturnsTransformationMethod.getInstance());
+        
+        //一开始进入新的Activity就要弹出键盘的话需要延时一会，等待activity加载完毕才能显示出键盘
+        Timer timer = new Timer();
+        timer.schedule(new TimerTask() {
+            @Override
+            public void run() {
+
+            Context context = view.getContext();
+            InputMethodManager imm = (InputMethodManager) context.getSystemService(Context.INPUT_METHOD_SERVICE);
+            view.requestFocus();
+            imm.showSoftInput(view, InputMethodManager.SHOW_IMPLICIT);
+            }
+        }, 998);
 
 ---
 
