--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -333,6 +333,47 @@ excerpt:
             imm.showSoftInput(view, InputMethodManager.SHOW_IMPLICIT);
             }
         }, 998);
+        
+* 监听内容变化:addTextChangedListener
+
+        searchEditText.addTextChangedListener(new TextWatcher() {
+            @Override
+            public void beforeTextChanged(CharSequence charSequence, int i, int i1, int i2) {
+                //输入内容改变前
+            }
+
+            @Override
+            public void onTextChanged(CharSequence charSequence, int i, int i1, int i2) {
+                //输入内容改变时
+            }
+
+            @Override
+            public void afterTextChanged(Editable editable) {//输入内容改变后
+                //editText内容为空改变视图
+                if ("".equals(searchEditText.getText().toString().trim())) {
+                    defaultLinearLayout.setVisibility(View.VISIBLE);
+                    searchDetailContentLinearLayout.setVisibility(View.GONE);
+                    initLatelySearch();
+                }
+            }
+        });
+        
+* 监听软键盘回车键事件:setOnEditorActionListener
+
+        searchEditText.setOnEditorActionListener(new TextView.OnEditorActionListener() {
+            @Override
+            public boolean onEditorAction(TextView v, int actionId, KeyEvent event) {
+                //搜索，对应在xml文件中设置属性android:imeOptions="actionSearch"
+                if (actionId == EditorInfo.IME_ACTION_SEARCH) {
+                    //搜索事件
+                    searchKeyText = searchEditText.getText().toString().trim();
+                    initData();
+
+                    return true;
+                }
+                return false;
+            }
+        });
 
 ---
 
