--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -827,9 +827,7 @@ excerpt:
 
         textView.getPaint().setFlags(0);  // 取消设置的的划线
     
----
-
-#### 动态设置shape
+* 动态设置shape
         
         TextView tag = new TextView(fragmentActivity);
         
@@ -880,7 +878,23 @@ excerpt:
         android:fitsSystemWindows="true"//布局扩展至手机屏幕
         android:clipToPadding="true"
 
+* 状态栏隐藏
 
+        public class MainActivity extends AppCompatActivity {
+            @Override
+            protected void onCreate(Bundle savedInstanceState) {
+                super.onCreate(savedInstanceState);
+                setContentView(R.layout.activity_main);
+                View decorView = getWindow().getDecorView();
+                int option = View.SYSTEM_UI_FLAG_FULLSCREEN;
+                decorView.setSystemUiVisibility(option);
+                ActionBar actionBar = getSupportActionBar();
+                actionBar.hide();
+            }
+        }
+        
+        [Android状态栏微技巧，带你真正理解沉浸式模式](http://blog.csdn.net/guolin_blog/article/details/51763825#comments)
+        
 ---
 
 #### 项目中用到的开源插件
