--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -837,7 +837,35 @@ excerpt:
         tag.setBackgroundDrawable(myGrad);
         
         [Android代码设置Shape,corners,Gradient](http://blog.csdn.net/houshunwei/article/details/17392409)
+        
+* 水平滚动显示的TextView
 
+        设置属性：
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit="marquee_forever"     
+
+        要让textview获得焦点才能滚动显示，重写TextView
+        public class AnnouncementTextView extends TextView{
+
+            public AnnouncementTextView(Context context) {
+                super(context);
+            }
+            public AnnouncementTextView(Context context, AttributeSet attrs) {
+                super(context, attrs);
+            }
+            public AnnouncementTextView(Context context, AttributeSet attrs,
+                                        int defStyle) {
+                super(context, attrs, defStyle);
+            }
+            @Override
+            public boolean isFocused() {//一直获得焦点
+                return true;
+            }
+        }
+
+
+        [TextView实现滚动显示的效果](http://blog.csdn.net/l0605020112/article/details/37569455)
+        
 ---
 
 #### 状态栏相关
