--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -705,7 +705,25 @@ excerpt:
             webView.loadUrl("javascript:submitForm()");     //submitForm()为嵌入网页的JS方法
         }
     };
-
+    
+        //监听web的点击事件可以监听WebViewClient的shouldOverrideUrlLoading(WebView view, String url)回调，其中的url即是点击事件请求的Uri，可以根据uri的scheme做相应的处理。
+        //uri结构：
+        格式：scheme://host:port/path
+        举个实际的例子：
+        content://com.example.project:200/folder/subfolder/etc
+        \---------/  \---------------------------/ \---/ \--------------------------/
+        scheme                 host               port        path
+                        \--------------------------------/
+                                  authority   
+        对应intent-filter中的data标签：
+        <data android:host="string"
+              android:mimeType="string"
+              android:path="string"
+              android:pathPattern="string"
+              android:pathPrefix="string"
+              android:port="string"
+              android:scheme="string" />
+              
 ---
 
 #### 设置状态栏的颜色
