--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -980,6 +980,8 @@ excerpt:
 
 * [leakcanary](https://github.com/square/leakcanary)    检测内存泄漏
 
+* [MarqueeView](https://github.com/sfsheng0322/MarqueeView)     俗名：垂直跑马灯;学名：垂直翻页公告
+
 ---
 
 
