--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -982,6 +982,8 @@ excerpt:
 
 * [MarqueeView](https://github.com/sfsheng0322/MarqueeView)     俗名：垂直跑马灯;学名：垂直翻页公告
 
+* [ASimpleCache](https://github.com/yangfuhai/ASimpleCache)     ASimpleCache 是一个为android制定的 轻量级的 开源缓存框架
+
 ---
 
 
