--- a/_posts/2015-12-11-android.md
+++ b/_posts/2015-12-11-android.md
@@ -941,6 +941,14 @@ excerpt:
         }
         
         [Android状态栏微技巧，带你真正理解沉浸式模式](http://blog.csdn.net/guolin_blog/article/details/51763825#comments)
+
+* 判断横竖屏
+
+        if (getActivity().getResources().getConfiguration().orientation != Configuration.ORIENTATION_PORTRAIT) {
+            VGetLog.e("change screen orientation");
+            getActivity().setRequestedOrientation(ActivityInfo.SCREEN_ORIENTATION_PORTRAIT);
+            return true;
+        }
         
 ---
 
